--- a/tips/2312B.md
+++ b/tips/2312B.md
@@ -2,4 +2,5 @@
 
 *   Different power nets! If doing 'original' raybox-zero without FSM, don't forget to change `top_ew_algofoogle` to use `vdd` and `vss`.
 *   Check all logs and warnings, inc. deep yosys stuff.
+*   Try to find any examples of disconnected pins/nets. Deliberately feed an error in to see how to find it?
 *   Go thru the same checks I did for EW.
