--- a/0187-2023-12-09.md
+++ b/0187-2023-12-09.md
@@ -69,7 +69,7 @@
     *   Thus, in order for an update to the internal mux control registers to take effect, the desired register state must be asserted on the respective LA pins for **two** rising edges of `mux_conf_clk`.
     *   It is designed this way so that *if* there are any spurious signals/glitches on the LA lines (say, during a system-wide `wb_rst_i`), then the internal state of the mux registers is far less likely to be corrupted (and hence a selected design can remain selected and active even across system resets).
     *   **NOTE:** To support this objective, **no reset** is provided for the internal mux control registers. Thus, assume the registers will start up in a random state.
-        *   **Addendum:** I MIGHT LATER include an async reset that can be driven via (say) `GPIO[0]`.
+        *   **Addendum:** I MIGHT LATER include an **async reset** that can be driven via (say) `GPIO[5]`. It could thus be configured (via `user_defaults`) to default to a `USER_INPUT` (and is a `MGMT_INPUT` input anyway, i.e. `ser_rx` when used by the SoC).
 *   The actual internal mux control registers are:
     *   `mux_sel[3:0]`: 1-of-16, select the active design (i.e. the single design that is connected to chip outputs). Note that only IDs 0..7 are for selecting user designs. The others 8..15 are for different mux tests and proof-of-life logic.
     *   `mux_sys_reset_enb`: 0=enable (wb_rst_i will reset all designs); 1=disable (wb_rst_i is detached from all designs).
@@ -86,34 +86,36 @@ Notes:
 
 # What I need now
 
-*   Book a call with Pawel and Diego?
 *   Consider whether we will be able to include scorbetta.
 *   Get link to Pawel's repo/branch.
 *   Get link to the correct branch of Diego's repo; make sure WB/LA are not used in this design.
 *   Share final layout and mux design with everyone, allowing them enough time to make adjustments.
 *   Make changes to pin placement for designs, esp. Diego's
-*   Work out ideal mapping of ports to pins for each person's design -- this can go in the mux.
+*   Work out ideal mapping of ports to pins for each person's design -- this can be done within the mux.
 *   Update my OWN designs.
 *   Create tests esp. for flowing thru mux.
 *   Check SDC for port names in mux, etc.
 
 # Other goals
 
-*   user_clock2
+*   user_clock2?
 
 # Notes for everyone
 
 *   Because all user_defines specify INPUTs by default, we shouldn't have a problem with power-on leading to bus contention. Firmware will be allowed as much time as it wants to select the desired design, register it and its reset config, assert individual reset lines as desired, configure GPIOs, then change reset lines.
 *   Things that could go wrong:
-    *   No CTS for mux_conf_clk
+    *   No CTS for mux_conf_clk... or should there be?
 
 
 # Group video call
 
 *   Without Meechy's design, WB is freely available to Pawel...?
-*   Confirm: Does Pawel just need: full WB; some IOs inc. bidir; 16 LAs INTO design (or OUT FROM too??)
-*   Unlikely we'll get selected, but certainly not the worst of chances.
+*   Is it necessary to include the code for all macros actually within the submitted repo?
+*   Confirm: Does Pawel need: full WB; some IOs inc. bidir; 16 LAs INTO design (or OUT FROM too??)
+*   Unlikely we'll get selected, but certainly not the worst odds.
 *   I might need to modify pin placement (or ask you to, if it's important to be under your own control) to better align with the mux.
 *   There's an option for direct INPUTs into some design edges, but also instead via a common bus in the mux.
 *   Explain the mux and why.
+*   My goal is to push the repo to efabless about 24 hours from now, then if you want to check your own respective part of the wiring, you can let me know if I've made a mistake, or just go ahead and fix it yourself.
 *   Hardening issues for Diego: Where are you up to with your design?
+*   What would happen if I turned the bus routing regions into actual macros, to help confine them but also pin-space them? Buffers would be inserted, and I could possibly force this to be increased.
