Update 0187 with die layout

--- a/0187-2023-12-09.md
+++ b/0187-2023-12-09.md
@@ -6,6 +6,10 @@
 
 # GFMPW-1 mux and group plan
 
+# Proposed die layout
+
+![](./i/0187-gfmpw1-layout-V3.png)
+
 # Spec for GFMPW-1 mux
 
 *   Anton's designs need 13 LA inputs.
@@ -116,6 +120,17 @@ Notes:
 *   I might need to modify pin placement (or ask you to, if it's important to be under your own control) to better align with the mux.
 *   There's an option for direct INPUTs into some design edges, but also instead via a common bus in the mux.
 *   Explain the mux and why.
+*   Mux CLOCK_PERIOD is slow, because actual `mux_conf_clk` change rate is slow over LA. Is this OK? It can also be slowed down (i.e. firmware delays) if needed.
 *   My goal is to push the repo to efabless about 24 hours from now, then if you want to check your own respective part of the wiring, you can let me know if I've made a mistake, or just go ahead and fix it yourself.
 *   Hardening issues for Diego: Where are you up to with your design?
 *   What would happen if I turned the bus routing regions into actual macros, to help confine them but also pin-space them? Buffers would be inserted, and I could possibly force this to be increased.
+*   Any final requests? Add them to the shared Google Sheet, and ping me to let me know.
+
+# Changes
+
+*   Got rid of i_reset_alt from trzf design. After that, we'd need only 12 LAs.
+
+# TODO
+
+*   Check the Google Sheet for any updates.
+*   Update SDCs esp. for mux.
