Minor update to 0187

--- a/0187-2023-12-09.md
+++ b/0187-2023-12-09.md
@@ -87,6 +87,9 @@ Notes:
 *   `wb_rst_i` could cause LAs to glitch in a way that resets a design that was meant to remain active *through* a system reset... but do we care? Anton was trying to avoid this for his own design, but it might not matter.
 *   Do I need an extra/special reset for raybox? Could THAT come from IO[0], and just be OR-ed down the chain? Would anyone else need it? It could be enabled/disabled with an extra register: `mux_ext_reset_enb`?
 
+## Example of controlling the mux via firmware
+
+TBC.
 
 # What I need now
 
@@ -133,4 +136,7 @@ Notes:
 # TODO
 
 *   Check the Google Sheet for any updates.
-*   Update SDCs esp. for mux.
+*   Update SDCs esp. for mux. HOLD VIOLATIONS! Why only on LA[55]? Maybe because it's the only one connected? No, so is LA[56]...? 55 is most distant. Does the problem only emerge during *changing*?
+*   Offer Pawel a reset IO to strap. Same as Diego.
+*   Only Anton needs LA now.
+*   Consider adding buffers to long wires in mux.
